deploy/argo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app: argocd-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      containers:
        - name: argocd-server
          image: bitnami/argo-cd@sha256:f71bd94f4930cb12dea1d8bf158a3dd1231d395bb9ece998dbda3e577f6e1c04  # Specify a stable version
          ports:
            - containerPort: 443
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"
          livenessProbe:
            httpGet:
              path: "/healthz"
              port: 443
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/healthz"
              port: 443
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  selector:
    app: argocd-server
  type: NodePort
  ports:
    - port: 443
      targetPort: 443
      nodePort: 30443  # Accessible via http://localhost:30443
