deploy/argoservice.yaml
# This YAML file contains the configuration for deploying ArgoCD Service on a Kubernetes cluster.

apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  selector:
    app: argocd-server
  ports:
    - name: argocd-ui
      nodePort: 30116
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: argocd-metrics
      nodePort: 30118
      port: 8083
      protocol: TCP
      targetPort: 8083
